# FastAPI-Celery-project

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 2025_12_12_1313-54b900b7c777_create_table.py  2025_12_12_1321-a2b4164997b8_create_new_table.py
api_v1/: __init__.py
api_v1/tasks/: crud.py  depends.py  reposetory.py  schemas.py  update_dep.py  update_tasks.py  views.py
core/: celery_app.py  celery_session.py  config.py  mixin.py  tasks.py
core/models/: __init__.py  base.py  db_helper.py  task.py  users.py
src/alembic/: env.py
src/alembic/versions/: 2025_12_12_1321-a2b4164997b8_create_new_table.py
src/api_v1/: __init__.py  tasks_router.py  users.py
src/celery/: celery_app.py
src/core/: config.py  tasks.py
src/crud/: tasks.py  users.py
src/database/: db_helper.py
src/models/: __init__.py  task.py  users.py
src/repos/: tasks.py  users.py
src/schemas/: tasks.py
users/: __init__.py  crud.py  dependencies.py  repos_users.py  shemas.py  views.py
