[project]
name = "newfile"
version = "0.1.0"
description = ""
authors = [
    {name = "Ravil",email = "ravil.mansurow2015@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"]


[tool.mypy]
ignore_missing_imports = true
