[project]
name = "fastapitest1"
version = "0.1.0"
dependencies = [
    "aiosqlite>=0.22.1",
    "celery>=5.6.2",
    "fastapi>=0.124.2",
    "greenlet>=3.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.38.0"
]

[tool.uv]
package = false
